fix align experts map, z-index issue, event button

--- a/frontend/src/main.scss
+++ b/frontend/src/main.scss
@@ -1545,3 +1545,9 @@ path {
     transition: all 0.13s ease-in-out;
   }
 }
+
+//pop over
+
+.ant-popover {
+  z-index: 99999;
+}
